--- a/Reservia/public_html/index.html
+++ b/Reservia/public_html/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Reservia</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../public_css/main.css">
     </head>
     <body>
         <nav>
+            <!-- Top navigation -->
+            <div class="topnav">
+                <div  class="logo">
+                    <img src="../images/logo/Reservia.svg">
+                </div>
+              <div class="topnav-right">
+                  
+                  <div>
+                    <a href="#hebergements" class="topnav-text">Hébergements</a>
+                  </div>
+                  <div>
+                    <a href="#activites"  class="topnav-text">Activités</a>
+                  </div>
+                  <div >
+                    <a href="#inscrire" class="topnav-text" id="signin">S'inscrire</a>
+                  </div>
+              </div>
+
+            </div>
             
         </nav>
         <header>
