--- a/Reservia/public_html/index.html
+++ b/Reservia/public_html/index.html
@@ -107,7 +107,7 @@
                                 <div class="card-text">
                                     <h3 class="title-card">Auberge la Cannebière</h3>
                                     <span class="title-card">Nuit à partir de <strong>25€</strong></span>
-                                    <div class="rating">
+                                    <div class="rating-hebergement">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -124,7 +124,7 @@
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel du port</h3>
                                     <span class="title-card">Nuit à partir de <strong>52€</strong></span>
-                                    <div class="rating">
+                                    <div class="rating-hebergement">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -141,7 +141,7 @@
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel Les mouettes</h3>
                                     <span class="title-card">Nuit à partir de <strong>76€</strong></span>
-                                    <div class="rating">
+                                    <div class="rating-hebergement">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -159,7 +159,7 @@
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel de la mer</h3>
                                     <span class="title-card">Nuit à partir de <strong>46€</strong></span>
-                                    <div class="rating">
+                                    <div class="rating-hebergement">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -176,7 +176,7 @@
                                 <div class="card-text">
                                     <h3 class="title-card">Auberge Le Panier</h3>
                                     <span class="title-card">Nuit à partir de <strong>23€</strong></span>
-                                    <div class="rating">
+                                    <div class="rating-hebergement">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -193,7 +193,7 @@
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel chez Amina</h3>
                                     <span class="title-card">Nuit à partir de <strong>96€</strong></span>
-                                    <div class="rating">
+                                    <div class="rating-hebergement">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -204,6 +204,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <div><h3 class="afficher-plus">Afficher plus</h3></div>
                 </div>
                 <!-- Box2 : Populaires -->
                 <div class="box2">
@@ -216,7 +218,7 @@
 
                             <h3 class="title-card">Hôtel Le soleil du matin</h3>
                             <span class="title-card">Nuit à partir de <strong>128€</strong></span>
-                            <div class="rating">
+                            <div class="rating-populaire">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -228,38 +230,91 @@
                     <div class="row-hebergement-1">
 
                         <div  class="card-populaire">
-                            <img src="../images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" >  
+                            <img src="../images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" >  
 
-                            <h3 class="title-card">Hôtel Le soleil du matin</h3>
-                            <span class="title-card">Nuit à partir de <strong>128€</strong></span>
-                            <div class="rating">
+                            <h3 class="title-card">Au coeur de l'eau<br>Chambres d'hôtes</h3>
+                            <span class="title-card">Nuit à partir de <strong>71€</strong></span>
+                            <div class="rating-populaire">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star nochecked"></span>
                             </div>
                         </div>
                     </div>
                     <div class="row-hebergement-1">
                         <div  class="card-populaire">
-                            <img src="../images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" >  
+                            <img src="../images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" >  
 
-                            <h3 class="title-card">Hôtel Le soleil du matin</h3>
-                            <span class="title-card">Nuit à partir de <strong>128€</strong></span>
-                            <div class="rating">
+                            <h3 class="title-card">Hôtel Tout bleu et Blanc</h3>
+                            <span class="title-card">Nuit à partir de <strong>68€</strong></span>
+                            <div class="rating-populaire">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star nochecked"></span>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- Section 2: Activités -->
-            <section></section>
+            <section>
+                <div class="box3">
+                    <div>
+                        <h2 class="h2-title">Activités à Marseille</h2>
+                    </div>
+                    <div class="row-activite"> 
+                        <div class="column-activite">
+                            <div class="card-activite-large">
+                                <img src="../images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar" class="activite-picture-large">
+                                <div class="container-activite-large">
+                                    <h4><b>Vieux Port</b></h4> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column-activite">
+                            <div class="card-activite">
+                                <img src="../images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" class="activite-picture">
+                                <div class="container-activite">
+                                    <h4><b>Fort de Pomègues</b></h4> 
+                                </div>
+                            </div>
+                            <div class="card-activite">
+                                <img src="../images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Avatar" class="activite-picture">
+                                <div class="container-activite">
+                                    <h4><b>Îles du Frioul</b></h4> 
+                                </div>
+                            </div>
+                        </div>  
+                        <div class="column-activite">
+                            <div class="card-activite-large">
+                                <img src="../images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" class="activite-picture-large">
+                                <div class="container-activite-large">
+                                    <h4><b>Parc National des Calanques</b></h4> 
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="column-activite">
+                            <div class="card-activite">
+                                <img src="../images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" class="activite-picture">
+                                <div class="container-activite">
+                                    <h4><b>Notre-Dame-de-la-Garde</b></h4> 
+                                </div>
+                            </div>
+                            <div class="card-activite">
+                                <img src="../images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Avatar" class="activite-picture">
+                                <div class="container-activite">
+                                    <h4><b>Parc LongChamp</b></h4> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- Footer  -->
         <footer>
