--- a/Reservia/public_html/index.html
+++ b/Reservia/public_html/index.html
@@ -103,7 +103,7 @@
                     <div class="row-hebergement-1">
                         <div class="column-hebergement">
                             <div class="card-hebergement">
-                                <img src="../images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="hebergement-picture" >
+                                <img src="../images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="hebergement-picture" >
                                 <div class="card-text">
                                     <h3 class="title-card">Auberge la Cannebière</h3>
                                     <span class="title-card">Nuit à partir de <strong>25€</strong></span>
@@ -120,7 +120,7 @@
 
                         <div class="column-hebergement">
                             <div class="card-hebergement">
-                                <img src="../images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement-picture" >
+                                <img src="../images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement-picture" >
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel du port</h3>
                                     <span class="title-card">Nuit à partir de <strong>52€</strong></span>
@@ -137,7 +137,7 @@
 
                         <div class="column-hebergement">
                             <div class="card-hebergement">
-                                <img src="../images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement-picture" >
+                                <img src="../images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement-picture" >
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel Les mouettes</h3>
                                     <span class="title-card">Nuit à partir de <strong>76€</strong></span>
@@ -155,7 +155,7 @@
                     <div class="row-hebergement-1">
                         <div class="column-hebergement">
                             <div class="card-hebergement">
-                                <img src="../images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement-picture" >
+                                <img src="../images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement-picture" >
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel de la mer</h3>
                                     <span class="title-card">Nuit à partir de <strong>46€</strong></span>
@@ -172,7 +172,7 @@
 
                         <div class="column-hebergement">
                             <div class="card-hebergement">
-                                <img src="../images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="hebergement-picture" >
+                                <img src="../images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="hebergement-picture" >
                                 <div class="card-text">
                                     <h3 class="title-card">Auberge Le Panier</h3>
                                     <span class="title-card">Nuit à partir de <strong>23€</strong></span>
@@ -189,7 +189,7 @@
 
                         <div class="column-hebergement">
                             <div class="card-hebergement">
-                                <img src="../images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="hebergement-picture" >
+                                <img src="../images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="hebergement-picture" >
                                 <div class="card-text">
                                     <h3 class="title-card">Hôtel chez Amina</h3>
                                     <span class="title-card">Nuit à partir de <strong>96€</strong></span>
@@ -214,7 +214,7 @@
                     </div>
                     <div class="row-hebergement-1">
                         <div  class="card-populaire">
-                            <img src="../images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" >  
+                            <img src="../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" >  
 
                             <h3 class="title-card">Hôtel Le soleil du matin</h3>
                             <span class="title-card">Nuit à partir de <strong>128€</strong></span>
@@ -230,7 +230,7 @@
                     <div class="row-hebergement-1">
 
                         <div  class="card-populaire">
-                            <img src="../images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" >  
+                            <img src="../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" >  
 
                             <h3 class="title-card">Au coeur de l'eau<br>Chambres d'hôtes</h3>
                             <span class="title-card">Nuit à partir de <strong>71€</strong></span>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="row-hebergement-1">
                         <div  class="card-populaire">
-                            <img src="../images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" >  
+                            <img src="../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" >  
 
                             <h3 class="title-card">Hôtel Tout bleu et Blanc</h3>
                             <span class="title-card">Nuit à partir de <strong>68€</strong></span>
@@ -266,50 +266,41 @@
                     <div>
                         <h2 class="h2-title">Activités à Marseille</h2>
                     </div>
-                    <div class="row-activite"> 
-                        <div class="column-activite">
-                            <div class="card-activite-large">
-                                <img src="../images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar" class="activite-picture-large">
-                                <div class="container-activite-large">
-                                    <h4><b>Vieux Port</b></h4> 
-                                </div>
+                    <div class="row-activite-container"> 
+                        <div class="card-vieux-port">
+                            <div class="card-activite">
+                                <img src="../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar" class="activite-picture picture-large">
+                                <span class="text-activite">Vieux Port</span> 
                             </div>
                         </div>
-                        <div class="column-activite">
+                        <div class="card-Pomegues">
                             <div class="card-activite">
-                                <img src="../images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" class="activite-picture">
-                                <div class="container-activite">
-                                    <h4><b>Fort de Pomègues</b></h4> 
-                                </div>
+                                <img src="../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" class="activite-picture picture-pomegues">
+                                <span class="text-activite">Fort de Pomègues</span> 
                             </div>
+                        </div>
+                        <div class="card-Frioul">
                             <div class="card-activite">
-                                <img src="../images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Avatar" class="activite-picture">
-                                <div class="container-activite">
-                                    <h4><b>Îles du Frioul</b></h4> 
-                                </div>
+                                <img src="../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Avatar" class="activite-picture picture-frioul">
+                                <span class="text-activite">Îles du Frioul</span> 
                             </div>
                         </div>  
-                        <div class="column-activite">
-                            <div class="card-activite-large">
-                                <img src="../images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" class="activite-picture-large">
-                                <div class="container-activite-large">
-                                    <h4><b>Parc National des Calanques</b></h4> 
-                                </div>
+                        <div class="card-Calangues">
+                            <div class="card-activite">
+                                <img src="../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" class="activite-picture picture-large">
+                                <span class="text-activite">Parc National des Calanques</span> 
                             </div>
-
                         </div>
-                        <div class="column-activite">
+                        <div class="card-Dame-de-la-garde">
                             <div class="card-activite">
-                                <img src="../images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" class="activite-picture">
-                                <div class="container-activite">
-                                    <h4><b>Notre-Dame-de-la-Garde</b></h4> 
-                                </div>
+                                <img src="../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" class="activite-picture picture-dame">
+                                <span class="text-activite">Notre-Dame-de-la-Garde</span> 
                             </div>
+                        </div>
+                        <div class="card-Longchamps">
                             <div class="card-activite">
-                                <img src="../images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Avatar" class="activite-picture">
-                                <div class="container-activite">
-                                    <h4><b>Parc LongChamp</b></h4> 
-                                </div>
+                                <img src="../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Avatar" class="activite-picture picture-longchamps">
+                                <span class="text-activite">Parc LongChamp</span> 
                             </div>
                         </div>
                     </div>
