--- a/Reservia/public_html/index.html
+++ b/Reservia/public_html/index.html
@@ -309,7 +309,24 @@
         </main>
         <!-- Footer  -->
         <footer>
-
+            <div class="box4">
+                <div class="footer-propos">
+                    <h2> A propos</h2>
+                    <p>Fonctionnement du site</p>
+                    <p>Conditions générales de vent</p>
+                    <p>Données et confidentialité</p>                
+                </div>
+                <div class="footer-hebergement">
+                    <h2>Nos hébergements</h2>
+                    <p>Charte qualité</p>
+                    <p>Soumettre votre hôtel</p>
+                </div>
+                <div class="footer-assistance">
+                    <h2>Assistance</h2>
+                    <p>Centre d'aide</p>
+                    <p>Nous contacter</p>
+                </div>
+            </div>
         </footer>
 
 
