--- a/Reservia/public_html/index.html
+++ b/Reservia/public_html/index.html
@@ -31,7 +31,7 @@
         </nav>
         <!-- Headers Localisation -->
         <header>
-            <h2>Trouvez votre hèbergement pour des vacances de rêve</h2>
+            <h2 class="header-title">Trouvez votre hèbergement pour des vacances de rêve</h2>
             <p>En plein centre ville ou en pleine nature</p>
 
             <form action="" method="get" class="container-header">
@@ -86,7 +86,7 @@
                         <i class="fas fa-info info-logo"></i>
                     </div>
                     <div class="info-text">
-                        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                        <p class="info-text-p">Plus de 500 logements sont disponibles dans cette ville</p>
                     </div>
                 </div>
             </div>
@@ -222,7 +222,8 @@
                 <!-- Box2 : Populaires -->
                 <div class="box2">
                     <div>
-                        <h2 class="h2-title">Les Plus populaires</h2>
+                        <h2 class="h2-title-populaire">Les plus populaires</h2>                       
+                        <i class="fas fa-chart-line chart-logo"></i>
                     </div>
                     <div class="row-hebergement-1">
                         <a href="#" class="clic-card">
