--- a/Reservia/public_html/index.html
+++ b/Reservia/public_html/index.html
@@ -3,9 +3,10 @@
     <head>
         <title>Reservia</title>
         <meta charset="UTF-8">
+        <link href="../public_css/desktop/main-desktop.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../public_css/main.css">
+        <link rel="stylesheet" href="../public_css/desktop/main-desktop.css">
         <script src="https://kit.fontawesome.com/c86141f044.js" crossorigin="anonymous"></script>
     </head>
     <body>
