--- a/Reservia/public_html/desktop/index-desktop.html
+++ b/Reservia/public_html/desktop/index-desktop.html
@@ -6,7 +6,7 @@
         <link href="../public_css/desktop/main-desktop.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../public_css/desktop/main-desktop.css">
+        <link rel="stylesheet" href="../../public_css/mobile/main-mobile.css">
         <script src="https://kit.fontawesome.com/c86141f044.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -14,7 +14,7 @@
         <nav>
             <div class="topnav">
                 <div  class="logo">
-                    <img src="../images/logo/Reservia.svg">
+                    <img src="../../images/logo/Reservia.svg">
                 </div>
                 <div class="topnav-right">
 
@@ -105,7 +105,7 @@
                         <div class="column-hebergement">
                             <a href="#" class="clic-card">
                                 <div class="card-hebergement">
-                                    <img src="../images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="hebergement-picture" alt="photo auberge la Cannebière">
+                                    <img src="../../images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="hebergement-picture" alt="photo auberge la Cannebière">
                                     <div class="card-text">
                                         <h3 class="title-card">Auberge la Cannebière</h3>
                                         <span class="title-card">Nuit à partir de <strong>25€</strong></span>
@@ -124,7 +124,7 @@
                         <div class="column-hebergement">
                             <a href="#" class="clic-card">
                                 <div class="card-hebergement">
-                                    <img src="../images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement-picture" alt="photo hôtel du port">
+                                    <img src="../../images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement-picture" alt="photo hôtel du port">
                                     <div class="card-text">
                                         <h3 class="title-card">Hôtel du port</h3>
                                         <span class="title-card">Nuit à partir de <strong>52€</strong></span>
@@ -143,7 +143,7 @@
                         <div class="column-hebergement">
                             <a href="#" class="clic-card">
                                 <div class="card-hebergement">
-                                    <img src="../images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Les mouettes">
+                                    <img src="../../images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Les mouettes">
                                     <div class="card-text">
                                         <h3 class="title-card">Hôtel Les mouettes</h3>
                                         <span class="title-card">Nuit à partir de <strong>76€</strong></span>
@@ -163,7 +163,7 @@
                         <div class="column-hebergement">
                             <a href="#" class="clic-card">
                                 <div class="card-hebergement">
-                                    <img src="../images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement-picture" alt="photo hôtel de la mer">
+                                    <img src="../../images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement-picture" alt="photo hôtel de la mer">
                                     <div class="card-text">
                                         <h3 class="title-card">Hôtel de la mer</h3>
                                         <span class="title-card">Nuit à partir de <strong>46€</strong></span>
@@ -182,7 +182,7 @@
                         <div class="column-hebergement">
                             <a href="#" class="clic-card">
                                 <div class="card-hebergement">
-                                    <img src="../images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="hebergement-picture" alt="photo auberge Le Panier">
+                                    <img src="../../images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="hebergement-picture" alt="photo auberge Le Panier">
                                     <div class="card-text">
                                         <h3 class="title-card">Auberge Le Panier</h3>
                                         <span class="title-card">Nuit à partir de <strong>23€</strong></span>
@@ -201,7 +201,7 @@
                         <div class="column-hebergement">
                             <a href="#" class="clic-card">
                                 <div class="card-hebergement">
-                                    <img src="../images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Chez amina">
+                                    <img src="../../images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Chez amina">
                                     <div class="card-text">
                                         <h3 class="title-card">Hôtel chez Amina</h3>
                                         <span class="title-card">Nuit à partir de <strong>96€</strong></span>
@@ -229,7 +229,7 @@
                     <div class="row-hebergement-1">
                         <a href="#" class="clic-card">
                             <div  class="card-populaire">
-                                <img src="../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" alt="photo hôtel Le soleil du matin">  
+                                <img src="../../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" alt="photo hôtel Le soleil du matin">  
 
                                 <h3 class="title-card">Hôtel Le soleil du matin</h3>
                                 <span class="title-card">Nuit à partir de <strong>128€</strong></span>
@@ -246,7 +246,7 @@
                     <div class="row-hebergement-1">
                         <a href="#" class="clic-card">
                             <div  class="card-populaire">
-                                <img src="../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" alt="photo chambre d'hôtes Au coeur de l'eau">  
+                                <img src="../../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" alt="photo chambre d'hôtes Au coeur de l'eau">  
 
                                 <h3 class="title-card">Au coeur de l'eau<br>Chambres d'hôtes</h3>
                                 <span class="title-card">Nuit à partir de <strong>71€</strong></span>
@@ -263,7 +263,7 @@
                     <div class="row-hebergement-1">
                         <a href="#" class="clic-card">
                             <div  class="card-populaire">
-                                <img src="../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" alt="photo hôtel Tout bleu et Blanc">  
+                                <img src="../../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" alt="photo hôtel Tout bleu et Blanc">  
 
                                 <h3 class="title-card">Hôtel Tout bleu et Blanc</h3>
                                 <span class="title-card">Nuit à partir de <strong>68€</strong></span>
@@ -289,7 +289,7 @@
                         <div class="card-vieux-port">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="activite-picture picture-large" alt="photo Vieux Port">
+                                    <img src="../../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="activite-picture picture-large" alt="photo Vieux Port">
                                     <span class="text-activite">Vieux Port</span> 
                                 </div>
                             </a>
@@ -297,7 +297,7 @@
                         <div class="card-Pomegues">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="activite-picture picture-pomegues" alt="photo Fort de Pomègues">
+                                    <img src="../../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="activite-picture picture-pomegues" alt="photo Fort de Pomègues">
                                     <span class="text-activite">Fort de Pomègues</span> 
                                 </div>
                             </a>
@@ -305,7 +305,7 @@
                         <div class="card-Frioul">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activite-picture picture-frioul" alt="photo Iles du Frioul">
+                                    <img src="../../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activite-picture picture-frioul" alt="photo Iles du Frioul">
                                     <span class="text-activite">Îles du Frioul</span> 
                                 </div>
                             </a>
@@ -313,7 +313,7 @@
                         <div class="card-Calangues">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="activite-picture picture-large" alt="photo Parc National des Calanques">
+                                    <img src="../../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="activite-picture picture-large" alt="photo Parc National des Calanques">
                                     <span class="text-activite">Parc National des Calanques</span> 
                                 </div>
                             </a>
@@ -321,7 +321,7 @@
                         <div class="card-Dame-de-la-garde">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"  class="activite-picture picture-dame" alt="photo Notre Dame de la Garde">
+                                    <img src="../../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"  class="activite-picture picture-dame" alt="photo Notre Dame de la Garde">
                                     <span class="text-activite">Notre-Dame-de-la-Garde</span> 
                                 </div>
                             </a>  
@@ -329,7 +329,7 @@
                         <div class="card-Longchamps">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="activite-picture picture-longchamps" alt="photo Parc Longhcamp">
+                                    <img src="../../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="activite-picture picture-longchamps" alt="photo Parc Longhcamp">
                                     <span class="text-activite">Parc LongChamp</span> 
                                 </div>
                             </a>  
