--- a/Reservia/public_html/mobile/index-mobile.html
+++ b/Reservia/public_html/mobile/index-mobile.html
@@ -14,26 +14,28 @@
         <nav>
             <div class="topnav">
                 <div  class="logo">
-                    <img src="../../images/logo/Reservia.svg">
-                </div>
+                    <div class="logo-picture">
+                        <img src="../../images/logo/Reservia.svg">
+                    </div>
+                    <div class="inscription">
+                        <a href="#inscrire" id="signin">S'inscrire</a>
+                    </div>
+                </div> 
                 <div class="topnav-right">
+                    <div class="topnav-text-hebergement">
+                        <a href="#ancre-hebergements">Hébergements</a>
+                    </div>
+                    <div class="topnav-text-activite">
+                        <a href="#ancre-activites">Activités</a>
+                    </div>
 
-                    <div>
-                        <a href="#ancre-hebergements" class="topnav-text">Hébergements</a>
-                    </div>
-                    <div>
-                        <a href="#ancre-activites"  class="topnav-text">Activités</a>
-                    </div>
-                    <div >
-                        <a href="#inscrire" class="topnav-text" id="signin">S'inscrire</a>
-                    </div>
                 </div>
             </div>
         </nav>
         <!-- Headers Localisation -->
         <header>
             <h2 class="header-title">Trouvez votre hèbergement pour des vacances de rêve</h2>
-            <p>En plein centre ville ou en pleine nature</p>
+            <p class="header-text">En plein centre ville ou en pleine nature</p>
 
             <form action="" method="get" class="container-header">
 
@@ -41,7 +43,9 @@
                     <i class="fas fa-map-marker-alt flex home"></i>
                     <label for="adress-text"></label>
                     <input type="text" name="adress-text" id="adress-text" placeholder="Marseille,France">
-                    <input  type="submit" class="flex rechercher" Value="Rechercher">
+                    <button class="btn btn-link btn-xs flex rechercher" type="submit" name="action" value="">
+                        <i class="fas fa-search"></i>
+                    </button>
                 </div>
             </form>
             <br>
@@ -50,22 +54,24 @@
                 <div class="filtre-label">
                     Filtres
                 </div>
-                <div class="cadre">
-                    <span class="filtre-logo-container">
-                        <i class="fas fa-money-bill-wave filtre-logo"></i>
-                    </span>
-                    <span class="filtre-text-container">
-                        Economique
-                    </span>                    
-                </div>
-                <div class="cadre">
-                    <span class="filtre-logo-container">
-                        <i class="fas fa-child  filtre-logo"></i>
-                    </span>
-                    <span class="filtre-text-container">
-                        Familial
-                    </span>                    
-                </div>
+                <div class="cadre-eco-fam">
+                    <div class="cadre-economie">
+                        <span class="filtre-logo-container">
+                            <i class="fas fa-money-bill-wave filtre-logo"></i>
+                        </span>
+                        <span class="filtre-text-container">
+                            Economique
+                        </span>           
+                    </div>
+                    <div class="cadre-famille">
+                        <span class="filtre-logo-container">
+                            <i class="fas fa-child  filtre-logo"></i>
+                        </span>
+                        <span class="filtre-text-container">
+                            Familial
+                        </span>        
+                    </div>
+                </div>                
                 <div class="cadre">
                     <span class="filtre-logo-container">
                         <i class="fas fa-heart filtre-logo"></i>
@@ -87,7 +93,7 @@
                         <i class="fas fa-info info-logo"></i>
                     </div>
                     <div class="info-text">
-                        <p class="info-text-p">Plus de 500 logements sont disponibles dans cette ville</p>
+                        <span class="info-text-p">Plus de 500 logements sont disponibles dans cette ville</span>
                     </div>
                 </div>
             </div>
@@ -96,6 +102,64 @@
         <main>
             <!-- Section 1 Hébergements -->
             <section class="hebergement">
+                <!-- Box2 : Populaires -->
+                <div class="box2">
+                    <div>
+                        <h2 class="h2-title-populaire">Les plus populaires</h2>                       
+                        <i class="fas fa-chart-line chart-logo"></i>
+                    </div>
+                    <div class="row-hebergement-1">
+                        <a href="#" class="clic-card">
+                            <div  class="card-populaire">
+                                <img src="../../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" alt="photo hôtel Le soleil du matin">  
+
+                                <h3 class="title-card">Hôtel Le soleil du matin</h3>
+                                <span class="title-card">Nuit à partir de <strong>128€</strong></span>
+                                <div class="rating-populaire">
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="row-hebergement-1">
+                        <a href="#" class="clic-card">
+                            <div  class="card-populaire">
+                                <img src="../../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" alt="photo chambre d'hôtes Au coeur de l'eau">  
+
+                                <h3 class="title-card">Au coeur de l'eau<br>Chambres d'hôtes</h3>
+                                <span class="title-card">Nuit à partir de <strong>71€</strong></span>
+                                <div class="rating-populaire">
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star nochecked"></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="row-hebergement-1">
+                        <a href="#" class="clic-card">
+                            <div  class="card-populaire">
+                                <img src="../../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" alt="photo hôtel Tout bleu et Blanc">  
+
+                                <h3 class="title-card">Hôtel Tout bleu et Blanc</h3>
+                                <span class="title-card">Nuit à partir de <strong>68€</strong></span>
+                                <div class="rating-populaire">
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star nochecked"></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <!-- Box1 : Hebergements -->
                 <div class="box1">
                     <div>
@@ -217,66 +281,7 @@
                             </a>
                         </div>
                     </div>
-
                     <div><h3 class="afficher-plus">Afficher plus</h3></div>
-                </div>
-                <!-- Box2 : Populaires -->
-                <div class="box2">
-                    <div>
-                        <h2 class="h2-title-populaire">Les plus populaires</h2>                       
-                        <i class="fas fa-chart-line chart-logo"></i>
-                    </div>
-                    <div class="row-hebergement-1">
-                        <a href="#" class="clic-card">
-                            <div  class="card-populaire">
-                                <img src="../../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" alt="photo hôtel Le soleil du matin">  
-
-                                <h3 class="title-card">Hôtel Le soleil du matin</h3>
-                                <span class="title-card">Nuit à partir de <strong>128€</strong></span>
-                                <div class="rating-populaire">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="row-hebergement-1">
-                        <a href="#" class="clic-card">
-                            <div  class="card-populaire">
-                                <img src="../../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" alt="photo chambre d'hôtes Au coeur de l'eau">  
-
-                                <h3 class="title-card">Au coeur de l'eau<br>Chambres d'hôtes</h3>
-                                <span class="title-card">Nuit à partir de <strong>71€</strong></span>
-                                <div class="rating-populaire">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star nochecked"></span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="row-hebergement-1">
-                        <a href="#" class="clic-card">
-                            <div  class="card-populaire">
-                                <img src="../../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" alt="photo hôtel Tout bleu et Blanc">  
-
-                                <h3 class="title-card">Hôtel Tout bleu et Blanc</h3>
-                                <span class="title-card">Nuit à partir de <strong>68€</strong></span>
-                                <div class="rating-populaire">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star nochecked"></span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
                 </div>
             </section>
             <!-- Section 2: Activités -->
@@ -297,7 +302,7 @@
                         <div class="card-Pomegues">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="activite-picture picture-pomegues" alt="photo Fort de Pomègues">
+                                    <img src="../../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="activite-picture picture-large" alt="photo Fort de Pomègues">
                                     <span class="text-activite">Fort de Pomègues</span> 
                                 </div>
                             </a>
@@ -305,7 +310,7 @@
                         <div class="card-Frioul">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activite-picture picture-frioul" alt="photo Iles du Frioul">
+                                    <img src="../../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activite-picture picture-large" alt="photo Iles du Frioul">
                                     <span class="text-activite">Îles du Frioul</span> 
                                 </div>
                             </a>
@@ -321,7 +326,7 @@
                         <div class="card-Dame-de-la-garde">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"  class="activite-picture picture-dame" alt="photo Notre Dame de la Garde">
+                                    <img src="../../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"  class="activite-picture picture-large" alt="photo Notre Dame de la Garde">
                                     <span class="text-activite">Notre-Dame-de-la-Garde</span> 
                                 </div>
                             </a>  
@@ -329,7 +334,7 @@
                         <div class="card-Longchamps">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
-                                    <img src="../../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="activite-picture picture-longchamps" alt="photo Parc Longhcamp">
+                                    <img src="../../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="activite-picture picture-large" alt="photo Parc Longhcamp">
                                     <span class="text-activite">Parc LongChamp</span> 
                                 </div>
                             </a>  
