--- a/Reservia/public_html/mobile/index-mobile.html
+++ b/Reservia/public_html/mobile/index-mobile.html
@@ -105,7 +105,7 @@
                 <!-- Box2 : Populaires -->
                 <div class="box2">
                     <div>
-                        <h2 class="h2-title-populaire">Les plus populaires</h2>                       
+                        <span class="h2-title-populaire title">Les plus populaires</span>                       
                         <i class="fas fa-chart-line chart-logo"></i>
                     </div>
                     <div class="row-hebergement-1">
@@ -163,7 +163,7 @@
                 <!-- Box1 : Hebergements -->
                 <div class="box1">
                     <div>
-                        <h2 class="h2-title" id="ancre-hebergements">Hébergements à Marseille</h2>
+                        <span class="title" id="ancre-hebergements">Hébergements à Marseille</span>
                     </div>
                     <div class="row-hebergement-1">
                         <div class="column-hebergement">
@@ -290,7 +290,7 @@
             <section>
                 <div class="box3">
                     <div class="activite-title">
-                        <span class="title" id="ancre-activites">Activités à Marseille</span>
+                        <span class="title">Activités à Marseille</span>
                     </div>
                     <div class="row-activite-container"> 
                         <div class="card-vieux-port">
