--- a/Reservia/public_html/mobile/index-mobile.html
+++ b/Reservia/public_html/mobile/index-mobile.html
@@ -22,10 +22,10 @@
                     </div>
                 </div> 
                 <div class="topnav-right">
-                    <div class="topnav-text-hebergement title">
+                    <div class="topnav-text-hebergement">
                         <a href="#ancre-hebergements" class="hebergement-active">Hébergements</a>
                     </div>
-                    <div class="topnav-text-activite title">
+                    <div class="topnav-text-activite">
                         <a href="#ancre-activites" class="activite-active">Activités</a>
                     </div>
 
