--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="topnav">
 
                 <div class="logo-picture">
-                    <img src="images/logo/Reservia.svg">
+                    <img src="images/logo/Reservia.svg" alt="reservia logo">
                 </div>
 
                 <div class="topnav-text-hebergement">
@@ -36,7 +36,7 @@
                 <h1 class="header-title">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p class="header-text">En plein centre ville ou en pleine nature</p>
 
-                <form action="" method="get">
+                <form>
 
                     <div class="container-header">
                         <i class="fas fa-map-marker-alt flex home"></i>
