--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="fr">
     <head>
         <title>Reservia</title>
-        <meta charset="UTF-8">
-        <link href="../public_css/desktop/main-desktop.css" rel="stylesheet" type="text/css"/>
+        <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="main.css" type="text/css">
         <script src="https://kit.fontawesome.com/c86141f044.js" crossorigin="anonymous"></script>
     </head>
     <body>
